tests/integration/run-pass/function-simple-update.casm
function x : -> Int

init main

rule main = { 
    x := 1 + 1
}
