tests/integration/compile-fail/definitions-rule-defined-multiple-times.casm
function x : -> Int

init main

rule main = { 
    x := 1
}

rule main = { //~ redefinition of rule
    x := 1
}
